DDF-825 Upgraded to Pax Exam 4
- Switched to using the java runner instead of the script runner to run DDF
- Upgraded pax-exam, rest-assured, slf4j, and junit
- TestFederation now uses rest-assured for testing
- Fixed wait for catalog provider and federated source to avoid NPE
- Removed unused dependencies
- Removed hamcrest from thirdparty and wrap bundle in configuration instead
- Added isDebugEnabled flag for remote debugging